fix: too much scroll on mobile safari, and add top scroll mask

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,5 @@
-@import "tailwindcss";
-@import "tw-animate-css";
+@import 'tailwindcss';
+@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
 
@@ -9,7 +9,7 @@
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --font-inter: var(--font-inter);
-  --font-berkeley-mono: var(--font-berkeley-mono);
+  --font-ioskeley-mono: var(--font-ioskeley-mono);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -181,13 +181,4 @@
     rgba(255, 255, 255, 1) 80%
   );
   pointer-events: none;
-}
-
-.thick {
-  color: #000;
-  text-shadow:
-    -1px -1px 0 currentColor,
-     1px -1px 0 currentColor,
-    -1px  1px 0 currentColor,
-     1px  1px 0 currentColor;
 }
